# boxme

./: CLAUDE.md  Cargo.toml  PLAN.md  README.md  install.sh
.claude/skills/fleet-fix/: SKILL.md
.claude/skills/fleet-update/: SKILL.md
.github/workflows/: ci.yml  release.yml
src/: allowlist.rs  auth.rs  claude.rs  cli.rs  composer_auth.rs  copyback.rs  detect.rs  dev.rs  main.rs  manifest.rs  netcap.rs  outside.rs  report.rs  review.rs  run.rs  scripts.rs  setup.rs  skills.rs  util.rs  vms.rs
