[package]
name = "boxme"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
microsandbox = "0.5"
microsandbox-network = "0.5"
ratatui = "0.29"
crossterm = "0.29"
tar = "0.4"
flate2 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
owo-colors = "4"
# Not used directly: time >= 0.3.47 breaks rcgen 0.14 (E0119 coherence
# conflict), pulled in via microsandbox-network. Drop once rcgen ships a fix.
time = { version = ">=0.3.6, <0.3.47", default-features = false }
